--- a/examples/webhook.qbit-ci.yaml
+++ b/examples/webhook.qbit-ci.yaml
@@ -8,7 +8,7 @@ steps:
         curl
           -H "Content-Type: application/json"
           -d '{"username": "cute anime girl", "content": "{{ torrent.name }} complete"}'
-          https://discord.com/api/webhooks/1026143262668488895/IxsxPMIu-02sFMMUzakPeQwEqKRIJOzct27oOnXB2DrpDBwBAmbjSo9jklN-UsOUn-GH
+          <webhook_url>
     when:
-      - '{{ changes.completion_on not in [None, -1] }}'
-      - '{{ torrent.state == "uploading" }}'
+      - '{{ changes.state == "uploading" }}'
+      - '{{ torrent.category == "" }}'
