--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
 # qBittorrent
-QBIT_HOST="localhost"
-QBIT_PORT="8080"
-QBIT_USERNAME="admin"
-QBIT_PASSWORD="adminadmin"
+QBIT_HOST=localhost
+QBIT_PORT=8080
+QBIT_USERNAME=admin
+QBIT_PASSWORD=adminadmin
 
 # Mounts
 # Prefix of the location where we mount our downloads folder
-MNT_PREFIX=".tmp"
+MNT_PREFIX=.tmp
